--- a/index.html
+++ b/index.html
@@ -1161,6 +1161,8 @@
 </head>
 <body>
     <app-root></app-root>
+    <script src="https://unpkg.com/@angular/localize@13.3.0/bundles/localize.umd.js" type="module"></script>
+    <script src="https://unpkg.com/@angular/platform-browser-dynamic@13.3.0/bundles/platform-browser-dynamic.umd.js" type="module"></script>
     <script src="{% static 'frontend/polyfills.js' %}" type="module"></script>
     <script src="{% static 'frontend/main.js' %}" type="module"></script>
 </body>
